--- a/ng.yml
+++ b/ng.yml
@@ -1,15 +1,11 @@
-# Save the output of this file and use kubectl create -f to import
-# it into Kubernetes.
-#
-# Created with podman-5.2.2
 apiVersion: v1
 kind: Pod
 metadata:
   annotations:
     io.containers.autoupdate/ng: registry
   labels:
-    app: ng-pod
-  name: ng-pod
+    app: ng2-pod
+  name: ng2-pod
 spec:
   containers:
   - args:
@@ -18,7 +14,7 @@ spec:
     - daemon off;
     image: docker.io/library/nginx:latest
     imagePullPolicy: always
-    name: ng
+    name: ng_ct
     ports:
     - containerPort: 80
       hostPort: 80
