--- a/ng.yml
+++ b/ng.yml
@@ -14,7 +14,7 @@ spec:
     - daemon off;
     image: docker.io/library/nginx:latest
     imagePullPolicy: always
-    name: ng_ct
+    name: ng_ct2
     ports:
     - containerPort: 80
       hostPort: 80
